[package]
name = "lib_remotebuild-rs"
version = "0.1.6"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"
description = "A wrapper for the remote build API written in rust"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/JojiiOfficial/LibRemotebuildRS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1.2.0"}
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
serde_derive = "1.0.123"
chrono = { version = "0.4.19", features = ["serde"] }
